@@ -44,6 +44,7 @@ debian-installer (trunk) UNRELEASED; urgency=low
       that really contain both sparc64 and sparc32 support.
     - Included 2.6.8 kernel for amd64. Closes: #307306
     - Add support for creating initramfs initrd images (needs rootskel 1.12).
+    - Move /unifont.bgf into lib. Needs rootskel 1.12.
   * Kurt Roeckx
     - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
       package list.
